<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataReportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/label_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lines="2"
            android:maxLines="2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_project"
            app:layout_constraintTop_toBottomOf="@id/label_project"
            tools:text="@string/dummy_project" />

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_project" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_location"
            app:layout_constraintTop_toBottomOf="@id/label_location"
            tools:text="@string/dummy_location" />

        <TextView
            android:id="@+id/label_hole_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hole_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location" />

        <TextView
            android:id="@+id/tv_hole_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_hole_id"
            app:layout_constraintTop_toBottomOf="@id/label_hole_id"
            tools:text="@string/dummy_hole_id" />

        <TextView
            android:id="@+id/label_engineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/engineer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hole_id" />

        <TextView
            android:id="@+id/tv_engineer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_engineer"
            app:layout_constraintTop_toBottomOf="@id/label_engineer"
            tools:text="@string/dummy_engineer" />

        <TextView
            android:id="@+id/label_easting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/easting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_project" />

        <TextView
            android:id="@+id/tv_easting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_easting"
            app:layout_constraintTop_toBottomOf="@id/label_easting"
            tools:text="@string/dummy_easting" />

        <TextView
            android:id="@+id/label_northing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/northing"
            app:layout_constraintStart_toStartOf="@+id/label_easting"
            app:layout_constraintTop_toBottomOf="@id/tv_easting" />

        <TextView
            android:id="@+id/tv_northing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_northing"
            app:layout_constraintTop_toBottomOf="@id/label_northing"
            tools:text="@string/dummy_northing" />

        <TextView
            android:id="@+id/label_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/elevation"
            app:layout_constraintStart_toStartOf="@+id/tv_northing"
            app:layout_constraintTop_toBottomOf="@id/tv_northing" />

        <TextView
            android:id="@+id/tv_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_elevation"
            app:layout_constraintTop_toBottomOf="@id/label_elevation"
            tools:text="@string/dummy_elevation" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_engineer" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/label_date"
            app:layout_constraintTop_toBottomOf="@id/label_date"
            tools:text="@string/dummy_date" />

<!--        <ProgressBar-->
<!--            android:id="@+id/progress_bar"-->
<!--            style="?android:attr/progressBarStyle"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            tools:visibility="visible" />-->

        <HorizontalScrollView
            android:id="@+id/hsv_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date">

            <TableLayout
                android:id="@+id/table_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@color/black"
                android:gravity="center"
                android:showDividers="middle">

            </TableLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_to_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/go_to_graph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hsv_table" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>